--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compileOnSave": false,
+  "javascript.implicitProjectConfig.experimentalDecorators": true,
   "compilerOptions": {
     "baseUrl": "./",
     "module": "esnext",
@@ -9,6 +10,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowJs": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
