--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,15 +24,18 @@
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@sentry/angular": "^5.24.2",
     "@sentry/tracing": "^5.24.2",
+    "@types/underscore": "^1.10.24",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^13.0.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
+    "underscore": "^1.11.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
