--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   },
+  "PhotoSettings": {
+    "MaxLength": 10485760,
+    "AcceptedFileNames": [ ".jpg", ".jpeg", ".png" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
